--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coolie-html-tag-template",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "description": "html <template> content replacement",
   "scripts": {},
   "preferGlobal": false,
